# pakr-typed-io

./: Cargo.toml  README.md
src/: be.rs  le.rs  lib.rs  reader.rs  tlv.rs  validator.rs  writer.rs
